<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue_5691fc">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text=""
            android:textColor="@color/white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/rest_page"
            android:textColor="@color/white_ffffff"
            android:textSize="17sp" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ipadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:hint="hint" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/staffid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ipadd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:hint="hint" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/staffid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="hint"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="IP Address: not set, Staff ID: not set, Repeat Count: not set"
        android:textColor="@color/grey_b3b3b3"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/company_name"
        android:textColor="@color/black_333333"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_company_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/company_website"
        android:textColor="@color/blue_5691fc"
        android:textSize="20sp" />


</RelativeLayout>